"Fix Footer on small screen size"

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -39,6 +39,11 @@
   }
 }
 
+@media (max-width: 768px) {
+  footer {
+    display: none;
+  }
+}
 @media (min-width: 768px) {
   main {
     box-shadow: 0px 15px 27px -3px rgba(0, 0, 0, 0.22);
